<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/equals"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/funEqual" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/funPluss" android:textSize="24sp"
            android:textColor="@android:color/background_light" android:background="@color/colorPrimaryDark"
            android:layout_marginBottom="30dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/_plus"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/funPluss" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/funMin" android:textSize="24sp"
            android:textColor="@android:color/background_light" android:background="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/funEqual"/>
    <Button
            android:text="@string/_minus"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/funMin" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/funMulti" android:textSize="24sp"
            android:textColor="@android:color/background_light" android:background="@color/colorPrimary"
            android:layout_marginBottom="1dp" app:layout_constraintBottom_toTopOf="@+id/funPluss"/>
    <Button
            android:text="@string/devide"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/funDiv" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtCalc" android:textSize="24sp"
            android:textColor="@android:color/background_light" android:background="@color/colorPrimary"
            android:layout_marginBottom="1dp" app:layout_constraintBottom_toTopOf="@+id/funMulti"
            app:layout_constraintStart_toEndOf="@+id/funPro" app:layout_constraintHorizontal_bias="0.5"/>
    <Button
            android:text="@string/_plussminus"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/funChange" app:layout_constraintEnd_toStartOf="@+id/funPro"
            android:layout_marginEnd="10dp" app:layout_constraintTop_toBottomOf="@+id/txtCalc"
            android:textSize="24sp" android:textColor="@android:color/background_light"
            android:background="@color/colorPrimary" android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toTopOf="@+id/btn8" app:layout_constraintStart_toEndOf="@+id/funReset"
            app:layout_constraintHorizontal_bias="0.5"/>
    <Button
            android:text="@string/prosent"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/funPro" app:layout_constraintEnd_toStartOf="@+id/funDiv" android:layout_marginEnd="10dp"
            android:textSize="24sp"
            android:textColor="@android:color/background_light" android:background="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/btn9"
            app:layout_constraintTop_toBottomOf="@+id/txtCalc" app:layout_constraintStart_toEndOf="@+id/funChange"
            app:layout_constraintHorizontal_bias="0.5"/>
    <Button
            android:text="@string/ac"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/funReset" app:layout_constraintEnd_toStartOf="@+id/funChange"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtCalc" android:textSize="24sp"
            android:background="@color/colorPrimary" android:textColor="@android:color/background_light"
            android:layout_marginBottom="1dp" app:layout_constraintBottom_toTopOf="@+id/btn7"
            app:layout_constraintHorizontal_bias="0.5"/>
    <Button
            android:text="@string/comma"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/btnComma" app:layout_constraintEnd_toStartOf="@+id/funEqual"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/btn3" android:textSize="24sp"
            android:layout_marginBottom="30dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/_0"
            android:layout_width="188dp"
            android:layout_height="90dp"
            android:id="@+id/btn0" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
            app:layout_constraintEnd_toStartOf="@+id/btnComma" android:layout_marginEnd="10dp"
            android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/btn2"
            android:textSize="24sp" android:layout_marginBottom="30dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/_2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/btn2" app:layout_constraintEnd_toStartOf="@+id/btn3" android:layout_marginEnd="10dp"
            android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/btn5" android:textSize="24sp"
            android:layout_marginBottom="2dp" app:layout_constraintBottom_toTopOf="@+id/btn0"/>
    <Button
            android:text="@string/_3"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/btn3" app:layout_constraintEnd_toStartOf="@+id/funPluss" android:layout_marginEnd="10dp"
            android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/btn6" android:textSize="24sp"
            android:layout_marginBottom="1dp" app:layout_constraintBottom_toTopOf="@+id/btnComma"/>
    <Button
            android:text="@string/_1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/btn1" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
            app:layout_constraintEnd_toStartOf="@+id/btn2" android:layout_marginEnd="9dp"
            android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/btn4" android:textSize="24sp"
            android:layout_marginBottom="2dp" app:layout_constraintBottom_toTopOf="@+id/btn0"/>
    <Button
            android:text="@string/_5"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/btn5" app:layout_constraintEnd_toStartOf="@+id/btn6" android:layout_marginEnd="10dp"
            android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/btn8" android:textSize="24sp"
            android:layout_marginBottom="1dp" app:layout_constraintBottom_toTopOf="@+id/btn2"/>
    <Button
            android:text="@string/_6"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/btn6" app:layout_constraintEnd_toStartOf="@+id/funMin" android:layout_marginEnd="10dp"
            android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/btn9" android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/btn3"/>
    <Button
            android:text="@string/_4"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/btn4" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
            app:layout_constraintEnd_toStartOf="@+id/btn5" android:layout_marginEnd="9dp"
            android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/btn7" android:textSize="24sp"
            android:layout_marginBottom="1dp" app:layout_constraintBottom_toTopOf="@+id/btn1"/>
    <Button
            android:text="@string/_8"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/btn8" app:layout_constraintEnd_toStartOf="@+id/btn9" android:layout_marginEnd="10dp"
            android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/funChange"
            android:textSize="24sp" app:layout_constraintBottom_toTopOf="@+id/btn5"/>
    <Button
            android:text="@string/_9"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/btn9" app:layout_constraintEnd_toStartOf="@+id/funMulti" android:layout_marginEnd="10dp"
            android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/funPro" android:textSize="24sp"
            android:layout_marginBottom="1dp" app:layout_constraintBottom_toTopOf="@+id/btn6"/>
    <Button
            android:text="@string/_multiple"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/funMulti" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/funDiv" android:textSize="24sp"
            android:textColor="@android:color/background_light" android:background="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/funMin"/>
    <Button
            android:text="@string/_7"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/btn7" app:layout_constraintEnd_toStartOf="@+id/btn8" android:layout_marginEnd="9dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/funReset" android:textSize="24sp"
            android:layout_marginBottom="1dp" app:layout_constraintBottom_toTopOf="@+id/btn4"/>
    <TextView
            android:text="@string/_0"
            android:layout_width="363dp"
            android:layout_height="110dp"
            android:id="@+id/txtCalc" android:textAlignment="textEnd"
            android:textSize="36sp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/funPro"/>
    <android.support.constraint.Group android:layout_width="wrap_content" android:layout_height="wrap_content"
                                      android:id="@+id/group" app:layout_constraintTop_toTopOf="parent"
                                      app:layout_constraintStart_toStartOf="parent"
                                      app:layout_constraintEnd_toStartOf="parent"
                                      app:layout_constraintBottom_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>